[package]
name = "feig-notigication-parser"
version = "0.1.0"
authors = ["Denis Kerner <dtricks@live.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = {version="6.2", features=["alloc"]}
thiserror = "1"

[dev-dependencies]
hex = "0.4"